Version 1.13.5+dev:
 * AI:
   * New Micro AI: Assassin Squad AI
 * Campaigns:
   * Eastern Invasion:
     * Fixed broken village encounters.
   * Delfador's Memoirs:
     * S9: Resolved inability to end level even when Delfador has the Staff
       (bug #24951)
     * S17: Resolved Wesnoth units returning to recall list not being healed
       properly (bug #24952)
     * S19: Resolved undead veterans victory condition not working properly.
 * Music and sound effects:
   * Added a preference to pause the music when the game loses focus.
   * Now the music fades out between scenarios.
 * Graphics:
   * Improved or new terrain graphics: New wooden floor variation and new
     transitions.
   * New sprite for Tentacle of the Deep.
 * Units:
   * Changed the sound for the melee attack of the
     Loyalist Bowman, Orcish Crossbowman and Orcish Slurbow.
 * User Interface:
   * Trait descriptions in the help are now generated. (This makes user-defined
     traits show up in the help as well.)
   * Fix game map sometimes showing and buttons sometimes not rendered properly
     in story screen (bug #24553)
   * Improved font rendering on Windows.
   * Redesigned gamestate inspector window.
   * Recall dialog no longer shows units that no leader on the map can recall
     (due to the [filter_recall] not matching)
   * Weapon specials only gained through AMLAs now get a help topic
   * The "Cores" button on the title screen is now hidden if no cores other
     than the default are installed
   * Redesigned game dropdown/context menu appearance
   * New categories bar in hotkey preferences allows you to filter hotkeys
 * WML Engine:
   * Added {HAS_NO_TURN_LIMIT} macro for objectives
   * New attributes for [message] with [option]
     * Added variable= to [message]: if specified, gives variable name to
       receive the [option] index (1..n) selected
       only used if any [option] appear
     * Added value= to [option]: if specified, gives value to store in variable