@@ -15,6 +15,7 @@
         {AI_CA_RECRUITMENT}
         {AI_CA_MOVE_LEADER_TO_GOALS}
         {AI_CA_MOVE_LEADER_TO_KEEP}
+        {AI_CA_HIGH_XP_ATTACK}
         {AI_CA_COMBAT}
         {AI_CA_HEALING}
         {AI_CA_VILLAGES}
