@@ -18,6 +18,10 @@
     120000
 #enddef
 
+#define AI_CA_HIGH_XP_ATTACK_MAX_SCORE
+    100010
+#enddef
+
 #define AI_CA_COMBAT_SCORE
     100000
 #enddef
@@ -90,6 +94,16 @@
         name=ai_default_rca::move_leader_to_keep_phase
         max_score={AI_CA_MOVE_LEADER_TO_KEEP_SCORE}
         score={AI_CA_MOVE_LEADER_TO_KEEP_SCORE}
+    [/candidate_action]
+#enddef
+
+#define AI_CA_HIGH_XP_ATTACK
+    [candidate_action]
+        id=high_xp_attack
+        engine=lua
+        name=ai_default_rca::high_xp_attack
+        location="ai/lua/ca_high_xp_attack.lua"
+        max_score=AI_CA_HIGH_XP_ATTACK_MAX_SCORE
     [/candidate_action]
 #enddef
 
