@@ -1,5 +1,8 @@
 Version 1.13.5+dev:
  * AI:
+   * Added new high_xp_attack candidate action to default AI. This CA performs
+     attacks on enemy units so close to leveling that the default AI's combat CA
+     would not attack them.
    * New Micro AI: Assassin Squad AI
  * Campaigns:
    * Eastern Invasion:
